Fix m_marks not initialized

This got lost during refactorings years ago

The bigger problem here is that we have 2 copies of this class, one
in ViMode and this one. The ViMode one seems to be the maintained
variant so we should drop this class soon and use the same class
everywhere.

BUG: 503455